# GCJ

./: template.cpp  template.rs
2018-QR/: CubicUFO.cpp  CubicUFO.in  GoGopher.cpp  SavingTheUniverseAgain.cpp  SavingTheUniverseAgain.in  TroubleSort.cpp  TroubleSort.in  TroubleSort.out  test_GoGopher.py
2018-R1A/: BitParty.cpp  BitParty.in  BitParty.out  EdgyBaking.cpp  WaffleChoppers.cpp  WaffleChoppers.in  WaffleChoppers.out
2018-R1B/: MysteriousRoadSigns.cpp  MysteriousRoadSigns.in  MysteriousRoadSigns.out  RoundingError.cpp
2018-R1C/: AWholeNewWord.cpp  AntStack.cpp  LolllipopShop.cpp
2018-R2/: CostumeChange.cpp  FallingBalls.cpp  GracefulChainsawJugglers.cpp
2019-QR/: Cryptopangrams.cpp  Cryptopangrams.in  Cryptopangrams.out  Cryptopangrams.rb  DatBae.cpp  ForegoneSolution.cpp  YouCanGoYourOwnWay.cpp
2019-R1A/: AlienRhyme.cpp  GolfGophers.cpp  Pylons-MLE.cpp  Pylons.cpp  Pylons.in
2019-R2/: Contransmutation.cpp  Contransmutation.in  Contransmutation.out  NewElementsPart1.cpp  NewElementsPart1.in  NewElementsPart1.out  NewElementsPart2.cpp  NewElementsPart2.in  NewElementsPart2.out
2020-QR/: ESAbATAd.cpp  NestingDepth.cpp  NestingDepth.in  NestingDepth.out  ParentingPartneringReturns.cpp  ParentingPartneringReturns.in  Vestigium.cpp  Vestigium.in
2020-R1A/: PascalWalk.cpp  PascalWalk.in  PascalWalk.out  PatternMatching.cpp  PatternMatching.in  PatternMatching.out  SquareDance.cpp  SquareDance.in  SquareDance.out
2022-R1A/: Cargo.toml  double_or_one_thing.in  double_or_one_thing.rs  equal_sum.rs  weightlifting.in  weightlifting.rs
(+141 files in other folders)
