[package]
name = "GCJ-2022R1A"
version = "0.1.0"
authors = ["Hiroshi Kori <hiroshi.maybe@gmail.com>"]
edition = "2018"

[dependencies]
rand = { version = "=0.7.3", features = ["small_rng"] }

[[bin]]
name = "double_or_one_thing"
path = "double_or_one_thing.rs"

[[bin]]
name = "equal_sum"
path = "equal_sum.rs"

[[bin]]
name = "weightlifting"
path = "weightlifting.rs"

